# InfiniteRandomizerFramework

./: README.md
src/RED4EXT/: CMakeLists.txt
src/RED4EXT/src/: CMakeLists.txt  FastRNG.cpp  FastRNG.h  InfiniteRandomizerFrameworkNative.cpp  InfiniteRandomizerFrameworkNative.h  InfiniteRandomizerFrameworkNativeSectorMod.cpp  InfiniteRandomizerFrameworkNativeStateManager.cpp  Main.cpp  RedLogger.cpp  RedLogger.h  Structs.h  globals.h  main.cpp  main.h
src/RED4EXT/src/DataStructs/: Category.h  Globals.h  Replacements.h  StreamingSectorNodeBuffer.h  VariantPool.h
src/REDSCRIPT/r6/scripts/InfiniteRandomizerFramework/: InfiniteRandomizerFramework.reds
src/r6/scripts/: InfiniteRandomizerFramework.reds
